syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Messaging";
package CecoChat.Contracts.Messaging;
import "message-type.proto";
import "data-type.proto";
import "delivery-status.proto";

service Listen {
  rpc Listen(ListenRequest) returns (stream ListenResponse);
}

message ListenRequest {
}

message ListenResponse {
  int64 message_id = 1;
  int64 sender_id = 2;
  int64 receiver_id = 3;
  int32 sequence_number = 4;
  MessageType type = 5;
  oneof response_data {
    ListenData message_data = 6;
    DeliveryStatus status = 7;
    ListenReaction reaction = 8;
  }
}

message ListenData {
  DataType type = 1;
  string data = 2;
}

message ListenReaction {
  int64 reactor_id = 1;
  string reaction = 2;
}